# pngpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  clang-format.sh  conanfile.txt  pngpp.sublime-project  readme.md  setup_msvc.bat
include/pngpp/: async.hpp  buffer.hpp  files.hpp  image.hpp  image_utils.hpp  png.hpp  rgba.hpp
src/: files.cpp  image.cpp  image_utils.cpp  main.cpp  png.cpp  rgba.cpp
